--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -111,6 +111,8 @@ jobs:
     strategy:
       matrix:
         service-hash-data: ${{ fromJson(needs.changes.outputs.hashes) }}
+    env:
+      REPOSITORY_NAME: ${{ matrix.service-hash-data.folder }}
     steps:
 
       - name: Get the output time
@@ -132,14 +134,11 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Check if repo exist
-        env:
-          REPOSITORY_NAME: ${{ matrix.service-hash-data.folder }}
         run: aws ecr describe-repositories --repository-names $REPOSITORY_NAME || aws ecr create-repository --repository-name $REPOSITORY_NAME
 
       - name: set branch-name
-        run: echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
-
-      - run: echo "$BRANCH_NAME"
+        run: echo "BRANCH_NAME"
+#        run: echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
 
 #      - name: Check if tag already exist
 #        id: tag-exist
@@ -165,7 +164,7 @@ jobs:
 #          fi
 #        env:
 #          TAG_LIST: "${{ env.BRANCH_NAME }}"
-#
+
 #      - name: Build, tag, and push image to Amazon ECR
 #        if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
 #        env:
@@ -204,12 +203,12 @@ jobs:
 
 
 
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#      - uses: actions/checkout@v2
+#        with:
+#          fetch-depth: 1
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
 
 #  tests:
 #    runs-on: ubuntu-20.04
