--- a/helm/charts/amplication/Chart.yaml
+++ b/helm/charts/amplication/Chart.yaml
@@ -33,6 +33,9 @@ dependencies:
 - name: amplication-storage-gateway
   version: "0.1.0"
   repository: "file://../services/amplication-storage-gateway"
+- name: amplication-notifications-service
+  version: "0.1.0"
+  repository: "file://../services/amplication-notifications-service"
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
