--- a/helm/charts/services/amplication-notifications/Chart.yaml
+++ b/helm/charts/services/amplication-notifications/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: amplication-notifications
-description: A Helm chart for the amplication-notifications component of Amplication.
+name: amplication-notifications-service
+description: A Helm chart for the amplication-notifications service component of Amplication.
 
 dependencies:
 
