--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -8,6 +8,7 @@
     "@apollo/client": "3.3.16",
     "@extra-set/difference": "2.2.3",
     "@monaco-editor/react": "^4.4.4",
+    "@novu/notification-center": "0.4.2",
     "@rooks/use-window-size": "3.6.0",
     "ajv-errors": "3.0.0",
     "axios": "0.27.2",
