--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -10,3 +10,5 @@ REACT_APP_FEATURE_FLAGS="{}"
 REACT_APP_DATA_SOURCE="/graphql"
 REACT_APP_STORAGE_GATEWAY_URL="http://localhost:3002"
 REACT_APP_SERVER_URI=""
+
+REACT_APP_NOVU_APP_ID_FROM_ADMIN_PANEL=[NOVU_APP_ID_FROM_ADMIN_PANEL]
