--- a/.github/actions/get-services-hash/action.yml
+++ b/.github/actions/get-services-hash/action.yml
@@ -1,13 +1,9 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
+name: 'Create services hash'
+description: 'Create services hash code hash signatures for change in code detection'
 outputs:
   service_hashes:
-    description: 'service hashes'
+    description: 'list of services hashes'
 runs:
   using: 'node16'
+  pre: 'setup.js'
   main: 'lib/main.js'
