--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -27,7 +27,7 @@ jobs:
           fetch-depth: 1
       - name: get services hash
         id: service-hashes
-        uses: ./.github/actions/get-services-hash
+        uses: .github/actions/get-services-hash
 
       - name: Get the output time
         run: echo "The step output ${{ steps.service-hashes.outputs.service_hashes }}"
