--- a/.github/actions/get-services-hash/action.yml
+++ b/.github/actions/get-services-hash/action.yml
@@ -5,5 +5,5 @@ outputs:
     description: 'list of services hashes'
 runs:
   using: 'node16'
-  pre: 'setup.js'
+  pre: 'scripts/setup.js'
   main: 'lib/main.js'
