--- a/packages/amplication-notifications-service/.env
+++ b/packages/amplication-notifications-service/.env
@@ -1,6 +1,8 @@
 COMPOSE_PROJECT_NAME=amplication-notifications-service
 NODE_ENV=development
 
+PORT=3333
+
 KAFKA_BROKERS=["localhost:9092"]
 KAFKA_CLIENT_ID="notifications-queue-client"
 KAFKA_CONSUMER_GROUP="amplication-notifications-service-group"
