--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -32,6 +32,7 @@
     "@amplication/kafka": "^0.13.1",
     "@amplication/prisma-db": "^0.13.1",
     "@apollo/gateway": "0.42.3",
+    "@aws-sdk/client-s3": "^3.113.0",
     "@codebrew/nestjs-storage": "0.1.6",
     "@extra-set/difference": "2.2.3",
     "@google-cloud/cloudbuild": "2.0.3",
