--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -129,3 +129,14 @@ amplication-storage-gateway:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "195638"
+
+amplication-notifications-service:
+  postgres:
+    install: false
+  config:
+    env:
+      KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_CLIENT_ID: notifications-queue-client
+      KAFKA_GROUP_ID: amplication-notifications-service-group
+      KAFKA_TOPIC: notification.internal.in-app-push.event.0
+      PORT: 3333
