--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -16,7 +16,57 @@ on:
       - "renovate.json"
       - ".all-contributorsrc"
 
-jobs:       
+jobs:  
+  changes:
+    runs-on: ubuntu-18.04
+    outputs:
+      packages: ${{ steps.build_list.outputs.package_build_list }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: get changed files (not pr)
+        if: github.event_name != 'pull_request'
+        id: changed-files-not-pr
+        run: |
+          changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
+          while IFS= read -r changed_file ; do 
+            echo "changed_file: $changed_file"
+            if [[ "$changed_file" == *"packages/"* || "$changed_file" == *"ee/packages/"* ]]; then
+              all_changed_files=$all_changed_files",$changed_file"
+            fi
+          done <<< "$changed_files"
+          all_changed_files="${all_changed_files:1}"
+          echo "all_changed_files: $all_changed_files"
+          echo "::set-output name=all_changed_files::$all_changed_files"
+      - name: get changed files (pr)
+        id: changed-files-pr
+        if: github.event_name == 'pull_request'
+        uses: tj-actions/changed-files@v22.1
+        with:
+          separator: ","
+          files_ignore: |
+            .github/**
+          files: |
+            packages/**
+            ee/packages/**
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+      - name: create package list
+        id: build_list
+        env:
+          CHANGED_FILES_PR: ${{ steps.changed-files-pr.outputs.all_changed_files }}
+          CHANGED_FILES_NOT_PR: ${{ steps.changed-files-not-pr.outputs.all_changed_files }}
+        run: |
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          pip install checksumdir
+          python .github/workflows/scripts/get-service-build-list.py
+          package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
+          echo "package_build_list: $package_build_list"
+          echo "::set-output name=package_build_list::$package_build_list"
+
   hashes:
     runs-on: ubuntu-18.04
     outputs:
@@ -41,8 +91,8 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-20.04
-    needs: [hashes]
-    if: ${{ needs.hashes.outputs.hashes != '[]' && needs.hashes.outputs.hashes != '' }}
+    needs: [hashes,changes]
+    if: ${{ needs.hashes.outputs.hashes != '[]' && needs.hashes.outputs.hashes != '' && needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != ''}}
     timeout-minutes: 45
     strategy:
       matrix:
@@ -131,56 +181,6 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ env.BRANCH_NAME }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
-
-  changes:
-    runs-on: ubuntu-18.04
-    outputs:
-      packages: ${{ steps.build_list.outputs.package_build_list }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: get changed files (not pr)
-        if: github.event_name != 'pull_request'
-        id: changed-files-not-pr
-        run: |
-          changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
-          while IFS= read -r changed_file ; do 
-            echo "changed_file: $changed_file"
-            if [[ "$changed_file" == *"packages/"* || "$changed_file" == *"ee/packages/"* ]]; then
-              all_changed_files=$all_changed_files",$changed_file"
-            fi
-          done <<< "$changed_files"
-          all_changed_files="${all_changed_files:1}"
-          echo "all_changed_files: $all_changed_files"
-          echo "::set-output name=all_changed_files::$all_changed_files"
-      - name: get changed files (pr)
-        id: changed-files-pr
-        if: github.event_name == 'pull_request'
-        uses: tj-actions/changed-files@v22.1
-        with:
-          separator: ","
-          files_ignore: |
-            .github/**
-          files: |
-            packages/**
-            ee/packages/**
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: create package list
-        id: build_list
-        env:
-          CHANGED_FILES_PR: ${{ steps.changed-files-pr.outputs.all_changed_files }}
-          CHANGED_FILES_NOT_PR: ${{ steps.changed-files-not-pr.outputs.all_changed_files }}
-        run: |
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          pip install checksumdir
-          python .github/workflows/scripts/get-service-build-list.py
-          package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
-          echo "package_build_list: $package_build_list"
-          echo "::set-output name=package_build_list::$package_build_list"
 
   tests:
     runs-on: ubuntu-20.04
