--- a/packages/amplication-notifications-service/Dockerfile
+++ b/packages/amplication-notifications-service/Dockerfile
@@ -10,8 +10,8 @@ RUN npm install --global npm@$NPM_VERSION
 RUN npm config set fund false
 
 WORKDIR /app
-COPY lerna.json /app
-COPY package*.json /app
+COPY lerna.json /app/
+COPY package*.json /app/
 RUN npm ci --production
 
 FROM base AS build
