--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -75,6 +75,7 @@
     "@types/lodash.uniqby": "4.7.6",
     "@types/lodash.zip": "4.2.6",
     "@types/morgan": "1.9.3",
+    "@types/node": "14.18.21",
     "@types/normalize-path": "3.0.0",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "^3.0.6",
@@ -85,7 +86,7 @@
     "@types/react-router-dom": "5.1.8",
     "@types/replace-ext": "2.0.0",
     "@types/semver": "7.3.9",
-    "@types/supertest": "2.0.11",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "4.28.3",
     "@typescript-eslint/parser": "4.28.3",
     "apollo-server-express": "2.19.0",
