--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -24,14 +24,17 @@
     "migrate:up": "cd ../amplication-prisma-db && npm run migrate:up"
   },
   "dependencies": {
+    "@amplication/container-builder": "^0.13.1",
     "@amplication/data": "^0.13.1",
     "@amplication/data-service-generator": "^0.13.1",
+    "@amplication/deployer": "^0.13.1",
     "@amplication/git-service": "^0.13.1",
     "@amplication/kafka": "^0.13.1",
     "@amplication/prisma-db": "^0.13.1",
     "@apollo/gateway": "0.42.3",
     "@codebrew/nestjs-storage": "0.1.6",
     "@extra-set/difference": "2.2.3",
+    "@google-cloud/cloudbuild": "2.0.3",
     "@google-cloud/secret-manager": "3.10.1",
     "@google-cloud/storage": "5.17.0",
     "@google-cloud/trace-agent": "5.1.3",
@@ -111,7 +114,7 @@
     "@types/passport-jwt": "3.0.6",
     "@types/pluralize": "0.0.29",
     "@types/semver": "7.3.9",
-    "@types/supertest": "2.0.12",
+    "@types/supertest": "2.0.11",
     "@types/tar-stream": "2.2.2",
     "@types/triple-beam": "1.3.2",
     "@typescript-eslint/eslint-plugin": "4.28.3",
