--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -110,7 +110,7 @@ jobs:
         run: |
           #download secret from AWS
           SECRETS="secret-$TARGET_ENV.yaml"
-          secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV --query 'SecretString[?Name ==`'$TARGET_ENV'`]' | jq -r '.[0].ARN')
+          secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV --query 'SecretList[?Name ==`'$TARGET_ENV'`]' | jq -r '.[0].ARN')
           echo $(aws secretsmanager get-secret-value --secret-id $secret_arn | jq -r '.SecretString') > $SECRETS_FILE_PATH
           python .github/workflows/scripts/argocd-secrets-creator.py
           cd secrets
