--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -1,3 +1,7 @@
+global:
+  pvc:
+    name: staging-os-efs-claim
+
 cp-helm-charts:
   enabled: false
   cp-kafka:
@@ -25,8 +29,6 @@ amplication-server:
   ingress:
     enabled: true
     hostname: server.staging-os.amplication-dev.com
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       HOST: "https://server.staging-os.amplication-dev.com"
@@ -85,8 +87,6 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   postgres:
     install: false
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -108,8 +108,6 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
@@ -122,14 +120,12 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server.staging-os.amplication-dev.com
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "195638"
 
-infra:
-  pvc:
-    name: staging-os-efs-claim
+# infra:
+#   pvc:
+#     name: staging-os-efs-claim
