--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -1,3 +1,7 @@
+global: 
+  pvc:
+    name: prod-efs-claim
+
 cp-helm-charts:
   enabled: false
   cp-kafka:
@@ -29,8 +33,6 @@ amplication-server:
     requests:
       cpu: 3
       memory: 6Gi
-  pvc:
-    name: prod-efs-claim
   postgres:
     install: false
   ingress:
@@ -99,8 +101,6 @@ amplication-git-push-webhook-service:
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
 
 amplication-git-pull-service:
-  pvc:
-    name: prod-efs-claim
   postgres:
     install: false
   config:
@@ -125,8 +125,6 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: prod-efs-claim
   config:
     env:
       #KAFKA
@@ -144,8 +142,6 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server.amplication.com
-  pvc:
-    name: prod-efs-claim
   config:
     env:
       #KAFKA
@@ -157,6 +153,6 @@ amplication-storage-gateway:
       #GitHub App
       GITHUB_APP_APP_ID: "176701"
 
-infra:
-  pvc:
-    name: prod-efs-claim
+# infra:
+#   pvc:
+#     name: prod-efs-claim
