--- a/helm/charts/services/amplication-git-pull-request-service/Chart.yaml
+++ b/helm/charts/services/amplication-git-pull-request-service/Chart.yaml
@@ -6,6 +6,9 @@ dependencies:
 - name: base
   version: "0.1.0"
   repository: "file://../../base"
+- name: infra
+  version: "0.1.0"
+  repository: "file://../../infra" 
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
