fix deployment amplication-server

--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -62,7 +62,7 @@ spec:
       volumes:
         - name: {{ .Values.volume.name }}
           persistentVolumeClaim:
-            claimName: {{ .Values.pvc.name }}
+            claimName: {{ .Values.global.pvc.name }}
         - name: {{ .Values.volume.name }}-secret
           secret:
             secretName: gcp-secret
