add condition + values for each service

--- a/helm/charts/services/amplication-git-pull-service/Chart.yaml
+++ b/helm/charts/services/amplication-git-pull-service/Chart.yaml
@@ -16,6 +16,7 @@ dependencies:
 - name: infra
   version: "0.1.0"
   repository: "file://../../infra" 
+  condition: infra.enabled 
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
