--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -51,3 +51,10 @@ postgres:
     imagePullPolicy: Always
     primary:
       podLabels: { name: "postgres" }
+
+infra:
+  enabled: false
+
+global:
+  pvc:
+    name: efs-claim
