--- a/helm/charts/services/amplication-storage-gateway/values.yaml
+++ b/helm/charts/services/amplication-storage-gateway/values.yaml
@@ -35,3 +35,10 @@ ingress:
   enabled: true
   hostname: server.amplication.com
   path: /storage
+
+infra:
+  enabled: false
+
+global:
+  pvc:
+    name: efs-claim
