--- a/helm/charts/services/amplication-server/templates/job.yaml
+++ b/helm/charts/services/amplication-server/templates/job.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   name: "{{ .Values.name }}-migrate"
 spec:
-  ttlSecondsAfterFinished: 5
+  # ttlSecondsAfterFinished: 5
   template:
     metadata:
       name: "{{ .Values.name }}-migrate"
