--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -13,17 +13,7 @@ cp-helm-charts:
       default.replication.factor: "1"
       min.insync.replicas: "1"
       auto.create.topics.enable: "true"
-      num.io.threads: "8"
-      num.network.threads: "5"
-      num.partitions: "5"
-      num.replica.fetchers: "2"
-      replica.lag.time.max.ms: "30000"
-      socket.receive.buffer.bytes: "102400"
-      socket.request.max.bytes: "104857600"
-      socket.send.buffer.bytes: "102400"
-      unclean.leader.election.enable: "true"
-      zookeeper.session.timeout.ms: "18000"
-      log.retention.hours: "72"
+      offsets.topic.replication.factor: "1"
     resources: {}
     heapOptions: "-Xms512M -Xmx512M"
     tolerations:
