--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -10,10 +10,10 @@ cp-helm-charts:
     podAnnotations:
       cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
     configurationOverrides:
-      default.replication.factor: "1"
-      min.insync.replicas: "1"
-      auto.create.topics.enable: "true"
-      offsets.topic.replication.factor: "1"
+      "default.replication.factor": "1"
+      "min.insync.replicas": "1"
+      "auto.create.topics.enable": "true"
+      "offsets.topic.replication.factor": "1"
     resources: {}
     heapOptions: "-Xms512M -Xmx512M"
     tolerations:
