--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -14,6 +14,7 @@ cp-helm-charts:
       "min.insync.replicas": "1"
       "auto.create.topics.enable": "true"
       "offsets.topic.replication.factor": "1"
+      "confluent.metrics.reporter.topic.replicas": "1"
     resources: {}
     heapOptions: "-Xms512M -Xmx512M"
     tolerations:
