--- a/packages/amplication-data-service-generator/src/server/static/.dockerignore
+++ b/packages/amplication-data-service-generator/src/server/static/.dockerignore
@@ -1,12 +1,8 @@
 .dockerignore
 docker-compose.yml
 Dockerfile
-admin-ui/build/
-admin-ui/node_modules/
-admin-ui/.env
-admin-ui/.gitignore
-server/dist/
-server/node_modules/
-server/.env
-server/.gitignore
-server/.prettierignore
+dist/
+node_modules
+.env
+.gitignore
+.prettierignore
