--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -13,6 +13,7 @@ SERVICE_DB_NAME=amplication-server
 CORS_ENABLE=1
 PORT=3000
 HOST=http://localhost:3000
+CLIENT_HOST=http://localhost:3001
 
 # GraphQL
 GRAPHQL_DEBUG=1
