--- a/packages/amplication-data-service-generator/src/admin/create-dotenv.template.env
+++ b/packages/amplication-data-service-generator/src/admin/create-dotenv.template.env
@@ -8,3 +8,4 @@ BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=amp_${appId}
 JWT_SECRET_KEY=Change_ME!!!
 JWT_EXPIRATION=2d
+REACT_APP_SERVER_URL =http://localhost:3000
