fix: create temp folders for packages

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -51,4 +51,4 @@ KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID='main-server-group'
 
 # BASE_BUILDS_FOLDER
-BASE_BUILDS_FOLDER=[path-to-local-folder]
+BASE_BUILDS_FOLDER=.temp
