--- a/packages/amplication-data-service-generator/src/admin/create-dotenv.template.env
+++ b/packages/amplication-data-service-generator/src/admin/create-dotenv.template.env
@@ -1,3 +1,10 @@
 PORT=3001
-SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SERVER_URL =http://localhost:3000
+POSTGRESQL_USER=${dbUser}
+POSTGRESQL_PASSWORD=${dbPassword}
+POSTGRESQL_PORT=${dbPort}
+POSTGRESQL_URL=postgres://${dbUser}:${dbPassword}@${dbHost}:${dbPort}${dbName}
+BCRYPT_SALT=10
+COMPOSE_PROJECT_NAME=amp_${appId}
+JWT_SECRET_KEY=Change_ME!!!
+JWT_EXPIRATION=2d
