--- a/lerna.json
+++ b/lerna.json
@@ -8,10 +8,7 @@
   "version": "0.13.1",
   "command": {
     "bootstrap": {
-      "ignore": [
-        "admin-template",
-        "server-template"
-      ]
+      "ignore": ["admin-template", "server-template"]
     }
   }
 }
