--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "16.14.0",
     "react-draggable": "4.4.3",
     "react-dropzone": "11.3.4",
+    "react-helmet": "^6.1.0",
     "react-hotkeys": "2.0.0",
     "react-lazylog": "4.5.3",
     "react-query": "3.39.1",
@@ -113,6 +114,7 @@
     "@types/react": "16.14.11",
     "@types/react-beautiful-dnd": "13.1.1",
     "@types/react-dom": "16.9.14",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-lazylog": "4.5.1",
     "@types/react-router-dom": "5.1.8",
     "@types/react-tracking": "7.0.4",
